# testing-websocket

./: main.py  pyproject.toml  requirements.txt
socket_client/: main.py  socket_client_one.py
socket_test/: main.py
tests/: test_socket_test.py
