[tool.poetry]
name = "socket-test"
version = "0.1.0"
description = ""
authors = ["Samuel Panek <samuelrpanek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.12b0"
fastapi = "^0.70.1"
websockets = "^10.1"
aioconsole = "^0.3.3"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
